# purple_llm

./: .gitignore  LICENSE  README.md  app.py  red_team.py
streamlit-llm-otel/: Dockerfile  README.md  docker-compose.yml  otel-collector-config.yml  pyproject.toml  requirements.txt
streamlit-llm-otel/.streamlit/: config.toml
streamlit-llm-otel/src/: app.py  llm_client.py  otel_config.py
streamlit-llm-otel/src/components/: ui.py
streamlit-llm-otel/src/observability/: metrics.py  tracer.py
streamlit-llm-otel/src/utils/: config.py
streamlit-llm-otel/tests/: test_app.py  test_otel.py
