[tool.poetry]
name = "streamlit-llm-otel"
version = "0.1.0"
description = "A Streamlit application with OpenTelemetry observability for LLM interactions."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.0"
opentelemetry-api = "^1.0"
opentelemetry-sdk = "^1.0"
opentelemetry-instrumentation = "^1.0"
opentelemetry-exporter-otlp = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"